# projeto_fast-api

./: .coverage  .dockerignore  .env  .gitignore  Dockerfile  README.md  apagar.txt  database.db  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  security.py  settings.py
fast_zero/routers/: auth.py  todo.py  users.py
migrations/: env.py
migrations/versions/: 80402c392b76_create_users_table.py  8c46b3d5ef4a_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_security.py  test_todo.py  test_users.py
